bin_PROGRAMS = dma_test dma_test_recv dma-loopback dma-loopie

dma_test_SOURCES = dma_test.c dma.c log.c

dma_test_recv_SOURCES = dma_test_recv.c dma.c log.c

dma_loopie_SOURCES = dma-loopie.c dma.c crc32.c log.c

dma_loopback_SOURCES = dma-loopback.c dma.c crc32.c log.c
dma_loopback_LDADD = -lpthread
