bin_PROGRAMS = chdr-recvcmdresponse chdr-sendcmd

chdr_recvcmdresponse_SOURCES = chdr-recvcmdresponse.c
chdr_recvcmdresponse_LDADD = $(top_builddir)/src/liberio.la
chdr_recvcmdresponse_CFLAGS = -I$(top_srcdir)/include

chdr_sendcmd_SOURCES = chdr-sendcmd.c
chdr_sendcmd_LDADD = $(top_builddir)/src/liberio.la
chdr_sendcmd_CFLAGS = -I$(top_srcdir)/include
